Adds new welcome screen. Cleans old unused classes

--- a/src/style.css
+++ b/src/style.css
@@ -6,3 +6,10 @@ canvas {
     display: block;   
     margin: auto;
 }
+
+@font-face {
+    font-family: supply_center;
+    src: url('assets/fonts/supply_center.ttf');
+    /* font-weight: 200;
+    font-weight: normal; */
+}
